add grid on main paragraph

--- a/descopera.html
+++ b/descopera.html
@@ -21,70 +21,72 @@
     <main>
         <section class="text">
             <h1>Descopera Islanda</h1>
-            <p>Islanda este o țară insulară aflată între Atlanticul de Nord și Oceanul Arctic. 
-               Este țara cu cea mai rarefiată populație din Europa. Capitala și cel mai mare oraș al țării 
-               este Reykjavík; zonele lui înconjurătoare din sud-vestul țării dețin două treimi din populație.
-               De la ghețari uluitori, la izvoare geotermale și vulcani activi, Islanda este un loc în care natura
-               este întotdeauna în centrul atenției. Chiar și în capitala plină de viață, Reykjavik, priveliștea 
-               spre mare și munții din apropiere face tot spectacolul. Izolat de restul Europei de secole, acest 
-               tărâm de foc și gheață are o moștenire culturală unică de literatură, muzică și bucătărie pe care 
-               o veți găsi și captivantă.</p>
-               <p>
-                Iluminată de aurora boreală în timpul iernii și de soarele de la miezul nopții vara, Islanda strălucește în orice anotimp, oferindu-vă o experiență de călătorie diferită de oriunde altundeva de pe planetă. Mare parte din alimentele tradiționale islandeze se bazează pe pește, carne de oaie și produse lactate, fără a utiliza aproape deloc condimente și ierburi. Din cauza climei insulei, fructele și legumele nu sunt de regulă o componentă a meselor tradiționale, deși utilizarea serelor le-a făcut mai frecvente în mesele contemporane.
-               </p>
-               <p>
-                Peștele marin este central pentru mare parte din felurile de mâncare islandeze, în special morunul și eglefinul, dar și somonul, heringul și halibutul. Carnea de papagal de mare este considerată o delicatesă locală adesea pregătită la grătar.
-               </p>
-               <h2>Locuri de vizitat in Islanda</h2>
-               <div class="item">
-                    <h2>Reykjavik</h2>
-                    <img src="../poze_descopera/reykjavik.jpg"/>
-                    <p>Răspândit peste peninsula Seltjarnarnes din sud-vestul Islandei, Reykjavik acoperă o suprafață surprinzător de mare pentru o capitală cu o populație de aproximativ 120.000 de locuitori. Cele mai multe vizite încep la centrul de vizitatori situat lângă pitorescul lac Tjornin, pe partea de vest a orașului. Pline cu exponate care povestesc moștenirea vikingă a Islandei, muzeele naționale sunt atracții obligatorii. Pentru o vedere panoramică a capitalei, mergeți cu liftul până la puntea de observație a bisericii moderniste Hallgrimskirkja, aflată la est de lac. Cu gama sa atrăgătoare de magazine, baruri și restaurante, artera centrală din Laugavegur merită și ea explorată.
-                    </p>
-               </div>
-               <div class="item">
-                    <h2>Laguna Albastra</h2>
-                    <img src="../poze_descopera/laguna_albastra.jpg"/>
-                    <p>Situată pe peninsula Reykjanes, la mai puțin de o oră de mers cu mașina de Reykjavik, Laguna Albastră este cea mai populară destinație turistică și unul dintre cele mai cunoscute locuri de vizitat din Islanda. Acest lac artificial este alimentat cu apă de mare supraîncălzită, evacuată dintr-un flux de lavă din apropiere.
-                       Apele geotermale conțin minerale despre care se crede că au beneficii pentru sănătate, dar este șansa de a te relaxa într-o lagună aburindă înconjurată de roci de lavă neagră care atrag cel mai mult vizitatorii. Pe lângă un restaurant cu vedere la lagună, un complex de 35 de camere oferă o serie de facilități de răsfăț, inclusiv tratamente spa, saune, băi de aburi și o sală de fitness complet echipată.
-                    </p>
-                </div>
-                <div class="item">
-                    <h2>Ruta Cercului de aur</h2>
-                    <img src="../poze_descopera/cerc.jpg" alt="cercul de aur"/>
-                    <p>Regiunea aflată imediat la est de Reykjavik conține o adunare interesantă a atracțiilor unice ale Islandei, inclusiv situri istorice, sate pitorești, gheizere și cascade. Mai multe companii de turism oferă excursii de o zi prin zonă de-a lungul drumurilor și autostrăzilor care sunt cunoscute în mod colectiv sub numele de Ruta Cercului de Aur. Cele mai populare tururi includ opriri la Gullfoss, unde mamutul „Golden Falls” se prăbușește prin canionul râului Hvita și izvoarele termale Geysir, locul de unde și-a luat numele cuvântul „gheizer”. Marcând locul în care națiunea Islanda a fost fondată în 930, Þingvellir antic este de obicei inclus și în tur.
-                    </p>
-                </div>
-                <div class="item">
-                    <h2>Cascada Gullfoss</h2>
-                    <img src="../poze_descopera/cascada_gullfoss.jpg" alt="cascada gullfoss"/>
-                    <p>Vizitatorii vor găsi Cascada Gullfoss maiestuoasă. Este renumită ca una dintre cele mai dramatice cascade din lume. Apa cade în cascadă peste o serie de stânci, trepte și terase înainte de a plonja peste crăpătura de 32 de metri înălțime care dă căderii aspectul său distinct ce pare a dispărea în subteranul islandez. Cascadele în sine pot fi găsite adesea arcuite de curcubeu sau învăluite în penuri de ceață, în timp ce vara, dealurile și crestele din jur sunt îmbrăcate într-o pătură verde de iarbă care constituie un fundal frumos pentru drumeții pe malurile râului Hvita.
-                    </p>
-                </div>
-                <div class="item">
-                    <h2>Parcul Național Vatnajokull</h2>
-                    <img src="../poze_descopera/vatnajokull.jpg" alt="vatnajokull"/>
-                    <p>Adăpostul celui mai mare ghețar din Europa, Parcul Național Vatnajokull este atât de vast încât cuprinde aproximativ 14% din țară. Împărțită în patru teritorii gestionate separat, secțiunea cea mai frecvent vizitată a parcului este teritoriul sudic Skaftafell, unde traseele vă duc pe lângă limbi glaciare și cascade albastre. Aventurierii rezistenți pot urca pe ghețarul Vatnajokull sau pot explora șirul lung de cratere vulcanice cunoscut sub numele de Lakagigar. Parcul are și o mulțime de caracteristici ușor accesibile, inclusiv puternica Dettifoss, o cascadă renumită pentru volumul mare de apă care se încadrează peste marginea sa.
-                    </p>
-                </div>
-                <div class="item">
-                    <h2>Landmannalaugar</h2>
-                    <img src="../poze_descopera/land.jpg" alt="landmannalaugar"/>
-                    <p>Situat în rezervația naturală Fjallaback din ținuturile muntoase interioare ale Islandei, Landmannalaugar este cel mai bine cunoscut pentru traseele sale pitorești de drumeții. Situată la marginea unui câmp de lavă, regiunea plată și ușor de traversat este renumită și pentru izvoarele termale naturale. Călătoriile populare includ drumeții scurte prin câmpul de lavă și urcări pe Muntele Blahnjukur din apropiere, unul dintre munții riolit care înalță câmpiile din Landmannalaugar. Companiile de turism efectuează excursii regulate de o zi în regiune în timpul sezonului de vârf, iar locurile de cazare rudimentare sunt disponibile pentru rezervări online.
-                    </p>
-                </div>
-                <div class="item">
-                    <h2>Husavik</h2>
-                    <img src="../poze_descopera/husavik.jpg" alt="husavik"/>
-                    <p>Un mic sat de pescari amplasat într-un golf adăpostit din nordul Islandei, Husavik își câștigă rapid reputația de unul dintre cele mai bune locuri din Europa pentru observarea balenelor. Cele mai comune specii observate de pe bărcile de tur includ balenele minke, cele cu cocoașa și albastre, precum și delfinul cu cioc alb și marsuina. Cu câteva schelete în mărime naturală expuse, Muzeul Balenelor Husavik oferă o mulțime de informații despre balene și, de asemenea, prezintă istoria vânătorii de balene în Islanda. Frumoasa biserică de lemn Husavikurkirkja, construită în 1907, merită de asemenea o vizită rapidă.
-                    </p>
-                </div>
-                <div class="item">
-                    <h2>Jokulsarlon</h2>
-                    <img src="../poze_descopera/jokulsalron.jpg" alt="jokulsalron"/>
-                    <p>Puține experiențe de călătorie în Islanda sunt mai memorabile decât vederea și ascultarea sunetului unui aisberg care se desprinde de un ghețar și se prăbușește în mare. Cel mai bun loc pentru a asista la această demonstrație a puterii naturii este în laguna ghețarului Jokulsarlon. Situat în sud-estul Islandei, acest lac punctat cu aisberguri a fost format din topirea ghețarului Breidamerkurjokull, care este o atracție majoră în sine. Deși puteți vedea lacul cu aisbergurile plutitoare care se mișcă încet de pe șoseaua de centură a insulei, nimic nu se compară cu a le vedea de aproape de pe puntea unei ambarcațiuni de turism.
-                    </p>
-                </div>
+            <div class="main_paragraph">
+                <p id="paragraf1">Islanda este o țară insulară aflată între Atlanticul de Nord și Oceanul Arctic. 
+                Este țara cu cea mai rarefiată populație din Europa. Capitala și cel mai mare oraș al țării 
+                este Reykjavík; zonele lui înconjurătoare din sud-vestul țării dețin două treimi din populație.
+                De la ghețari uluitori, la izvoare geotermale și vulcani activi, Islanda este un loc în care natura
+                este întotdeauna în centrul atenției. Chiar și în capitala plină de viață, Reykjavik, priveliștea 
+                spre mare și munții din apropiere face tot spectacolul. Izolat de restul Europei de secole, acest 
+                tărâm de foc și gheață are o moștenire culturală unică de literatură, muzică și bucătărie pe care 
+                o veți găsi și captivantă.</p>
+                <p id="paragraf2">
+                    Iluminată de aurora boreală în timpul iernii și de soarele de la miezul nopții vara, Islanda strălucește în orice anotimp, oferindu-vă o experiență de călătorie diferită de oriunde altundeva de pe planetă. Mare parte din alimentele tradiționale islandeze se bazează pe pește, carne de oaie și produse lactate, fără a utiliza aproape deloc condimente și ierburi. Din cauza climei insulei, fructele și legumele nu sunt de regulă o componentă a meselor tradiționale, deși utilizarea serelor le-a făcut mai frecvente în mesele contemporane.
+                </p>
+                <p id="paragraf3">
+                    Peștele marin este central pentru mare parte din felurile de mâncare islandeze, în special morunul și eglefinul, dar și somonul, heringul și halibutul. Carnea de papagal de mare este considerată o delicatesă locală adesea pregătită la grătar.
+                </p>
+            </div>
+            <h2>Locuri de vizitat in Islanda</h2>
+            <div class="item">
+                <h2>Reykjavik</h2>
+                <img src="../poze_descopera/reykjavik.jpg"/>
+                <p>Răspândit peste peninsula Seltjarnarnes din sud-vestul Islandei, Reykjavik acoperă o suprafață surprinzător de mare pentru o capitală cu o populație de aproximativ 120.000 de locuitori. Cele mai multe vizite încep la centrul de vizitatori situat lângă pitorescul lac Tjornin, pe partea de vest a orașului. Pline cu exponate care povestesc moștenirea vikingă a Islandei, muzeele naționale sunt atracții obligatorii. Pentru o vedere panoramică a capitalei, mergeți cu liftul până la puntea de observație a bisericii moderniste Hallgrimskirkja, aflată la est de lac. Cu gama sa atrăgătoare de magazine, baruri și restaurante, artera centrală din Laugavegur merită și ea explorată.
+                </p>
+            </div>
+            <div class="item">
+                <h2>Laguna Albastra</h2>
+                <img src="../poze_descopera/laguna_albastra.jpg"/>
+                <p>Situată pe peninsula Reykjanes, la mai puțin de o oră de mers cu mașina de Reykjavik, Laguna Albastră este cea mai populară destinație turistică și unul dintre cele mai cunoscute locuri de vizitat din Islanda. Acest lac artificial este alimentat cu apă de mare supraîncălzită, evacuată dintr-un flux de lavă din apropiere.
+                   Apele geotermale conțin minerale despre care se crede că au beneficii pentru sănătate, dar este șansa de a te relaxa într-o lagună aburindă înconjurată de roci de lavă neagră care atrag cel mai mult vizitatorii. Pe lângă un restaurant cu vedere la lagună, un complex de 35 de camere oferă o serie de facilități de răsfăț, inclusiv tratamente spa, saune, băi de aburi și o sală de fitness complet echipată.
+                </p>
+            </div>
+            <div class="item">
+                <h2>Ruta Cercului de aur</h2>
+                <img src="../poze_descopera/cerc.jpg" alt="cercul de aur"/>
+                <p>Regiunea aflată imediat la est de Reykjavik conține o adunare interesantă a atracțiilor unice ale Islandei, inclusiv situri istorice, sate pitorești, gheizere și cascade. Mai multe companii de turism oferă excursii de o zi prin zonă de-a lungul drumurilor și autostrăzilor care sunt cunoscute în mod colectiv sub numele de Ruta Cercului de Aur. Cele mai populare tururi includ opriri la Gullfoss, unde mamutul „Golden Falls” se prăbușește prin canionul râului Hvita și izvoarele termale Geysir, locul de unde și-a luat numele cuvântul „gheizer”. Marcând locul în care națiunea Islanda a fost fondată în 930, Þingvellir antic este de obicei inclus și în tur.
+                </p>
+            </div>
+            <div class="item">
+                <h2>Cascada Gullfoss</h2>
+                <img src="../poze_descopera/cascada_gullfoss.jpg" alt="cascada gullfoss"/>
+                <p>Vizitatorii vor găsi Cascada Gullfoss maiestuoasă. Este renumită ca una dintre cele mai dramatice cascade din lume. Apa cade în cascadă peste o serie de stânci, trepte și terase înainte de a plonja peste crăpătura de 32 de metri înălțime care dă căderii aspectul său distinct ce pare a dispărea în subteranul islandez. Cascadele în sine pot fi găsite adesea arcuite de curcubeu sau învăluite în penuri de ceață, în timp ce vara, dealurile și crestele din jur sunt îmbrăcate într-o pătură verde de iarbă care constituie un fundal frumos pentru drumeții pe malurile râului Hvita.
+                </p>
+            </div>
+            <div class="item">
+                <h2>Parcul Național Vatnajokull</h2>
+                <img src="../poze_descopera/vatnajokull.jpg" alt="vatnajokull"/>
+                <p>Adăpostul celui mai mare ghețar din Europa, Parcul Național Vatnajokull este atât de vast încât cuprinde aproximativ 14% din țară. Împărțită în patru teritorii gestionate separat, secțiunea cea mai frecvent vizitată a parcului este teritoriul sudic Skaftafell, unde traseele vă duc pe lângă limbi glaciare și cascade albastre. Aventurierii rezistenți pot urca pe ghețarul Vatnajokull sau pot explora șirul lung de cratere vulcanice cunoscut sub numele de Lakagigar. Parcul are și o mulțime de caracteristici ușor accesibile, inclusiv puternica Dettifoss, o cascadă renumită pentru volumul mare de apă care se încadrează peste marginea sa.
+                </p>
+            </div>
+            <div class="item">
+                <h2>Landmannalaugar</h2>
+                <img src="../poze_descopera/land.jpg" alt="landmannalaugar"/>
+                <p>Situat în rezervația naturală Fjallaback din ținuturile muntoase interioare ale Islandei, Landmannalaugar este cel mai bine cunoscut pentru traseele sale pitorești de drumeții. Situată la marginea unui câmp de lavă, regiunea plată și ușor de traversat este renumită și pentru izvoarele termale naturale. Călătoriile populare includ drumeții scurte prin câmpul de lavă și urcări pe Muntele Blahnjukur din apropiere, unul dintre munții riolit care înalță câmpiile din Landmannalaugar. Companiile de turism efectuează excursii regulate de o zi în regiune în timpul sezonului de vârf, iar locurile de cazare rudimentare sunt disponibile pentru rezervări online.
+                </p>
+            </div>
+            <div class="item">
+                <h2>Husavik</h2>
+                <img src="../poze_descopera/husavik.jpg" alt="husavik"/>
+                <p>Un mic sat de pescari amplasat într-un golf adăpostit din nordul Islandei, Husavik își câștigă rapid reputația de unul dintre cele mai bune locuri din Europa pentru observarea balenelor. Cele mai comune specii observate de pe bărcile de tur includ balenele minke, cele cu cocoașa și albastre, precum și delfinul cu cioc alb și marsuina. Cu câteva schelete în mărime naturală expuse, Muzeul Balenelor Husavik oferă o mulțime de informații despre balene și, de asemenea, prezintă istoria vânătorii de balene în Islanda. Frumoasa biserică de lemn Husavikurkirkja, construită în 1907, merită de asemenea o vizită rapidă.
+                </p>
+            </div>
+            <div class="item">
+                <h2>Jokulsarlon</h2>
+                <img src="../poze_descopera/jokulsalron.jpg" alt="jokulsalron"/>
+                <p>Puține experiențe de călătorie în Islanda sunt mai memorabile decât vederea și ascultarea sunetului unui aisberg care se desprinde de un ghețar și se prăbușește în mare. Cel mai bun loc pentru a asista la această demonstrație a puterii naturii este în laguna ghețarului Jokulsarlon. Situat în sud-estul Islandei, acest lac punctat cu aisberguri a fost format din topirea ghețarului Breidamerkurjokull, care este o atracție majoră în sine. Deși puteți vedea lacul cu aisbergurile plutitoare care se mișcă încet de pe șoseaua de centură a insulei, nimic nu se compară cu a le vedea de aproape de pe puntea unei ambarcațiuni de turism.
+                </p>
+            </div>
         </section>
     </main>
     <footer>
