--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="index.html" class="menu-item">Home</a>
         <a href="#" class="menu-item">About</a>
         <a href="artists.html" class="menu-item">Artists</a>
-        <a href="#" class="menu-item">Appointment</a>
+        <a href="appointment.html" class="menu-item">Appointment</a>
       </nav>
     </header>
     <main>
