--- a/appointment.html
+++ b/appointment.html
@@ -40,7 +40,8 @@
           placeholder="example@example.com"
           pattern=".+@globex\.com"
         />
-        <input type="date" id="date" required />
+        <input type="date" id="start"
+       value="2023-01-26">
         <div class="container-appt">
           <h2 class="title-appt">Do you have a preferred Tattoo Artist?</h2>
           <p class="text-appt">
