--- a/appointment.html
+++ b/appointment.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <link href="appointment.css" rel="stylesheet" />
+    <script
+    src="https://kit.fontawesome.com/8bda2fb56c.js"
+    crossorigin="anonymous"
+  ></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +16,7 @@
       <img src="photos/logo.png" alt="logo" id="logo" />
       <nav class="menu-items">
         <a href="index.html" class="menu-item">Home</a>
-        <a href="#" class="menu-item">About</a>
+        <a href="about.html" class="menu-item">About</a>
         <a href="artists.html" class="menu-item">Artists</a>
         <a href="appointment.html" class="menu-item">Appointment</a>
       </nav>
