--- a/artists.html
+++ b/artists.html
@@ -16,7 +16,7 @@
       <img src="photos/logo.png" alt="logo" id="logo" />
       <nav class="menu-items">
         <a href="index.html" class="menu-item">Home</a>
-        <a href="#" class="menu-item">About</a>
+        <a href="about.html" class="menu-item">About</a>
         <a href="artists.html" class="menu-item">Artists</a>
         <a href="appointment.html" class="menu-item">Appointment</a>
       </nav>
