--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
                  lumina soarelui este aproape inexistenta, lasand locul Aurorei Boreale, un caleidoscop de culori intinse 
                  pe cerul intunecat al iernii, un fenomen de exceptie care nu trebuie ratat. Insula abunda in activitate 
                  subterana, iar o mare parte a caldurii geotermale este folosita pentru baile din spa-uri si pentru incalzirea 
-                 caselor, Islanda fiind unul dintre cei mai mari producatori de energie geotermica din lume. Cei care doresc
-                  o vacanta dinamica vor gasi aici activitati pentru toate gusturile: snowmobile, echitatie, expeditii speologice,
-                   catarare, inot, ski, rafting, caiac si excursii pe munte cu jeep-uri adaptate special. Islandezii si-au pastrat
-                    nestirbita mostenirea vikinga, traditiile, istoria si folclorul in pofida dezvoltarii economice si culturale, 
-                    zonele rurale fiind inca dominate de elfi si troli, fiecare regiune avand propriile mituri si legende, multe 
-                    dintre ele amintite prin monumente si placi comemorative.
+                 caselor, Islanda fiind unul dintre cei mai mari producatori de energie geotermica din lume. Cei care doresc o vacanta dinamica vor gasi aici activitati pentru toate gusturile: snowmobile, echitatie, expeditii speologice,
+                 catarare, inot, ski, rafting, caiac si excursii pe munte cu jeep-uri adaptate special. Islandezii si-au pastrat
+                 nestirbita mostenirea vikinga, traditiile, istoria si folclorul in pofida dezvoltarii economice si culturale, 
+                 zonele rurale fiind inca dominate de elfi si troli, fiecare regiune avand propriile mituri si legende, multe 
+                 dintre ele amintite prin monumente si placi comemorative.
             </p>
         </article>
         <div class="containers">
@@ -82,8 +81,7 @@
         
     </main>
     <footer>
-        <p class="footer-text"> © Copyright 2023 
-            designed with <span id="heart" style="color:red">&#10084;</span> by Diana
+        <p class="footer-text"> © Copyright 2023 designed with <span id="heart" style="color:red">&#10084;</span> by Diana
         </p>
     </footer>
 </body>
