--- a/descopera.html
+++ b/descopera.html
@@ -32,11 +32,9 @@
                 spre mare și munții din apropiere face tot spectacolul. Izolat de restul Europei de secole, acest 
                 tărâm de foc și gheață are o moștenire culturală unică de literatură, muzică și bucătărie pe care 
                 o veți găsi și captivantă.</p>
-                <p id="paragraf2">
-                    Iluminată de aurora boreală în timpul iernii și de soarele de la miezul nopții vara, Islanda strălucește în orice anotimp, oferindu-vă o experiență de călătorie diferită de oriunde altundeva de pe planetă. Mare parte din alimentele tradiționale islandeze se bazează pe pește, carne de oaie și produse lactate, fără a utiliza aproape deloc condimente și ierburi. Din cauza climei insulei, fructele și legumele nu sunt de regulă o componentă a meselor tradiționale, deși utilizarea serelor le-a făcut mai frecvente în mesele contemporane.
+                <p id="paragraf2">Iluminată de aurora boreală în timpul iernii și de soarele de la miezul nopții vara, Islanda strălucește în orice anotimp, oferindu-vă o experiență de călătorie diferită de oriunde altundeva de pe planetă. Mare parte din alimentele tradiționale islandeze se bazează pe pește, carne de oaie și produse lactate, fără a utiliza aproape deloc condimente și ierburi. Din cauza climei insulei, fructele și legumele nu sunt de regulă o componentă a meselor tradiționale, deși utilizarea serelor le-a făcut mai frecvente în mesele contemporane.
                 </p>
-                <p id="paragraf3">
-                    Peștele marin este central pentru mare parte din felurile de mâncare islandeze, în special morunul și eglefinul, dar și somonul, heringul și halibutul. Carnea de papagal de mare este considerată o delicatesă locală adesea pregătită la grătar.
+                <p id="paragraf3">Peștele marin este central pentru mare parte din felurile de mâncare islandeze, în special morunul și eglefinul, dar și somonul, heringul și halibutul. Carnea de papagal de mare este considerată o delicatesă locală adesea pregătită la grătar.
                 </p>
             </div>
             <h2>Locuri de vizitat in Islanda</h2>
