+about+cateva schimbari

--- a/about.html
+++ b/about.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="about.css" rel="stylesheet" />
-    <script
-    src="https://kit.fontawesome.com/8bda2fb56c.js"
-    crossorigin="anonymous"
-  ></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="header.footer.css" rel="stylesheet" />
+    <link href="about.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/8bda2fb56c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
@@ -22,11 +23,40 @@
       </nav>
     </header>
 
-    <div class="video-background">
-        <video autoplay loop muted>
-          <source src="video.mp4" type="video/mp4">
-        </video>
+    <main>
+      <article>
+        <h1 class="title">Career</h1>
+        <p class="career">
+          McCurdy got his first tattoo at the age of 15 after his parents
+          honored a bargain that they would consent if he made the honor roll.
+          The Superman logo was done for $180 at Tattoos by RC in Folsom,
+          Pennsylvania.
+        </p>
+        <p class="career">
+          Less than a year after launching his career, McCurdy moved to New York
+          City. He had a hard time finding work at first, bouncing from one
+          tattoo shop to the next. When he would show tattoo artists his
+          portfolio, they had a hard time believing it was actually McCurdy's
+          work because of how impressively the tattoos were done.
+        </p>
+        <p class="career">
+          As demand for his work grew, McCurdy went to work between several
+          tattoo parlors, including Last Rites and East Side Ink. When his bid
+          for ownership was spurned, he made plans to launch his own shop, a
+          move which ultimately led to his firing.[3] After about a decade of
+          work around New York City, McCurdy opened Bang Bang Tattoo on Clinton
+          Street in 2013, with investment money coming from his father.
+        </p>
+      </article>
+      <article class="places">
+        <h2 class="title">Our places</h2>
+      </article>
+
+      <div class="container">
+        <img class="slideshow-first" />
+        <img class="slideshow-second" />
       </div>
+    </main>
 
     <footer class="container-footer">
       <div class="locations">
