--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="header.footer.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/8bda2fb56c.js"
       crossorigin="anonymous"
     ></script>
-    <link href="index.css" rel="stylesheet" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BangBang</title>
   </head>
   <body>
