--- a/contact.html
+++ b/contact.html
@@ -4,65 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css">
     <title>Pet Shop</title>
 </head>
 <body>
     <header class="header">
-    <div class="info">
-        <div class="container">
-            <div class="section1">
-                <img class="icon1" src="imagini/location.png" alt="">
-                <div class="locatie">
-                    <p style="color: rgb(172, 172, 172);"><b style="color: rgb(104, 103, 103); font-size: 16px;text-transform: uppercase;">Locație</b> <br>Strada Almas 2-8</p>
-                </div>
-                <div class="border"></div>
-            </div>
-        </div>
-
-        <div class="container2">
-            <div class="section2">
-                <img class="icon" src="imagini/email.png" alt="">
-                <div class="mail">
-                    <p style="color: rgb(172, 172, 172);"><b style="color: rgb(104, 103, 103); font-size: 16px; text-transform: uppercase;">E-Mail</b> <br>petshop@gmail.com</p>
-                </div>
-                <div class="border"></div>
-            </div>
-        </div>
-
-        <div class="container3">
-            <div class="section3">
-                <img class="icon" src="imagini/phone.png" alt="">
-                <div class="telefon">
-                    <p style="color: rgb(172, 172, 172);"><b style="color: rgb(104, 103, 103); font-size: 16px;text-transform: uppercase;">Telefon</b> <br>0775 155 917</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    
-    <div class="border2"></div>
     
     <nav class="navigare">
         <img class="logo" src="imagini/logo.jpg" alt="">
         <div class="nav">
             <a class="menu" href="index.html">Acasă</a>
             <a class="menu" href="servicii.html">Servicii</a>
-            <a class="menu active" href="contact.html">Contact</a>
+            <a class="menu active3" href="contact.html">Contact</a>
         </div>
     </nav>
 
-    <section class="section-banner">
+    <section class="section-contact">
         <h1 class="contact">Contacteaza-ne</h1>
 
         <div class="contact-block">
+            <div class="map-contact"><div class="gmap_canvas"><iframe width="289" height="354" id="gmap_canvas" src="https://maps.google.com/maps?q=Strada%20Almas%202-8&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br></div></div>
             <div class="info-block">
                 <p class="info-text">LOCATIE: Strada Almas 2-8</p>
                 <p class="info-text">E-MAIL: petshop@gmail.com</p>
                 <p class="info-text">TELEFON: 0775 155 917</p>
             </div>
         </div>
-        <div class="map-contact"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=721&amp;height=500&amp;hl=en&amp;q=Strada Almas 2-8&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.gachacute.com/">www.gachacute.com</a></div><style>.mapouter{position:relative;text-align:right;width:721px;height:500px;}.gmap_canvas {overflow:hidden;background:none!important;width:721px;height:500px;}.gmap_iframe {width:721px!important;height:500px!important;}</style></div>
         </section>
 </header>
 
