--- a/index.html
+++ b/index.html
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Proiect-HTML-CSS</title>
-</head>
-<body>
-    Teeeext
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
+    />
+    <title>BariCare</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <!-- Header (Logo + Nav Menu)-->
+      <header>
+        <span class="logo">
+          <img
+            src="/images/baricare_logo.svg"
+            class="logo-svg"
+            alt="BariCare Logo"
+          />
+          <p>Care</p>
+        </span>
+        <input type="checkbox" class="nav-toggle" id="nav-toggle" />
+        <label
+          for="nav-toggle"
+          class="nav-toggle-label"
+          aria-label="Menu button"
+        ></label>
+        <nav>
+          <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="gastric_sleeve.html">Gastric sleeve</a></li>
+            <li><a href="gastric_bypass.html">Gastric bypass</a></li>
+            <li><a href="gastric_band.html">Gastric band</a></li>
+            <li class=""><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <article class="hero-intro-wrap">
+        <div class="hero-content">
+            <h1 class="hero-title">Empower your weight loss journey</h1>
+            <h2 class="hero-subtitle">Make an informed decision for achieving your goals to one of the biggest struggles of our modern lifestyle. </h3>
+              <a href="#types-of-interventions" class="hero-button">Read more</a>
+        </div>
+          <img src="/images/hero_image.jpg" alt="Person happy after weight loss" class="hero-image">
+      </article>
+
+      <!-- Types of surgerios -->
+      <section id="types-of-interventions" class="types-of-interventions">
+        <h1>Types of interventions</h1>
+        <div class="items-wrap">
+          <div class="item">
+            <div class="item-intro">
+              <span class="item-number">01</span>
+              <p class="item-title">Gastric sleeve</p>
+          </div>
+            <p class="item-description">
+              It is a weight loss procedure that involves reducing the size of the stomach by removing a large portion of it.
+            </p>
+          </div>
+          <div class="item"><span class="item-number">02</span><p class="item-title">Gastric bypass</p> <p class="item-description">It is a weight loss procedure that involves creating a smaller stomach and rerouting the small intestine to this new stomach.</p></div>
+          <div class="item"><span class="item-number">03</span><p class="item-title">Gastric band</p> <p class="item-description">It is a weight loss procedure that involves placing an adjustable band around the upper part of the stomach to create a small stomach pouch.</p> </div>
+        </div>
+      </section>
+
+      <!-- Top 3 benefits -->
+      <section>
+        <div class="items-wrap">
+          <div class="item">4</div>
+          <div class="item">5</div>
+          <div class="item">6</div>
+        </div>
+      </section>
+
+      <!-- Top 3 drawbacks -->
+      <section>
+        <div class="items-wrap">
+          <div class="item">4</div>
+          <div class="item">5</div>
+          <div class="item">6</div>
+        </div>
+      </section>
+
+    </div>
+  </body>
 </html>
