--- a/index.html
+++ b/index.html
@@ -52,22 +52,44 @@
       <!-- Types of surgerios -->
       <section id="types-of-interventions" class="types-of-interventions">
         <h1>Types of interventions</h1>
-        <div class="items-wrap">
-          <div class="item">
-            <div class="item-intro">
-              <span class="item-number">01</span>
-              <p class="item-title">Gastric sleeve</p>
-          </div>
-            <p class="item-description">
-              It is a weight loss procedure that involves reducing the size of the stomach by removing a large portion of it.
-            </p>
-          </div>
-          <div class="item"><span class="item-number">02</span><p class="item-title">Gastric bypass</p> <p class="item-description">It is a weight loss procedure that involves creating a smaller stomach and rerouting the small intestine to this new stomach.</p></div>
-          <div class="item"><span class="item-number">03</span><p class="item-title">Gastric band</p> <p class="item-description">It is a weight loss procedure that involves placing an adjustable band around the upper part of the stomach to create a small stomach pouch.</p> </div>
+          <div class="items-wrap">
+            <!-- Item #1-->
+            <div class="item">
+             <div class="item-intro">
+               <span class="item-number">01</span>
+                <p class="item-title">Gastric sleeve</p>
+              </div>
+              <p class="item-description">
+                It is a weight loss procedure that involves reducing the size of the stomach by removing a large portion of it.
+              </p>
+              <a href="gastric_sleeve.html" class="read-more-button">Read more</a>
+            </div>
+            <!-- Item #2-->
+            <div class="item">
+              <div class="item-intro">
+                <span class="item-number">02</span>
+                 <p class="item-title">Gastric bypass</p>
+               </div>
+               <p class="item-description">
+                It is a weight loss procedure that involves creating a smaller stomach and rerouting the small intestine to this new stomach.
+               </p>
+               <a href="gastric_bypass.html" class="read-more-button">Read more</a>
+             </div>
+            <!-- Item #3-->
+            <div class="item">
+              <div class="item-intro">
+                <span class="item-number">03</span>
+                 <p class="item-title">Gastric band</p>
+               </div>
+               <p class="item-description">
+                It is a weight loss procedure that involves placing an adjustable band around the upper part of the stomach to create a small stomach pouch.
+               </p>
+               <a href="gastric_band.html" class="read-more-button">Read more</a>
+             </div>
         </div>
       </section>
-
-      <!-- Top 3 benefits -->
+<!-- To be continued later on; damn, that wasn't easy and took waaaaay longer than I expected
+       Top 3 benefits 
       <section>
         <div class="items-wrap">
           <div class="item">4</div>
@@ -76,7 +98,7 @@
         </div>
       </section>
 
-      <!-- Top 3 drawbacks -->
+      Top 3 drawbacks 
       <section>
         <div class="items-wrap">
           <div class="item">4</div>
@@ -84,7 +106,12 @@
           <div class="item">6</div>
         </div>
       </section>
+
+      !-->
 
     </div>
+    <footer class="footer">
+      <p>Author: Silviu</p>
+    </footer>
   </body>
 </html>
