--- a/gastric_band.html
+++ b/gastric_band.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
     />
-    <title>BariCare - Gastric Sleeve</title>
+    <title>BariCare - Gastric Bypass</title>
   </head>
   <body>
     <div class="wrapper">
@@ -33,10 +33,10 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <a class="active" href="gastric_sleeve.html">Gastric sleeve</a>
+              <ahref="gastric_sleeve.html">Gastric sleeve</a>
             </li>
             <li><a href="gastric_bypass.html">Gastric bypass</a></li>
-            <li><a href="gastric_band.html">Gastric band</a></li>
+            <li><a class="active" href="gastric_band.html">Gastric band</a></li>
             <li class=""><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -48,34 +48,41 @@
           <li><a href="index.html" class="breadcrumb-item">Home</a></li>
           <li>
             <a href="#" class="breadcrumb-item current-page"
-              ><span aria-current="page">Gastric sleeve</span></a
+              ><span aria-current="page">Gastric band</span></a
             >
           </li>
         </ul>
 
         <div class="container-content">
           <div class="content-intro">
-            <h1>Gastric sleeve</h1>
+            <h1>Gastric band</h1>
             <p class="item-description content-d">
-              The gastric sleeve, also called sleeve gastrectomy, is the most
-              commonly performed bariatric surgery in the U.S. This may be
-              because it's a relatively simple procedure that's safe to perform
-              on most people with little risk of complications. 
+                The operation is performed laparoscopically with a small camera
+                and light source.  The band is placed around the stomach just
+                below where it attaches to the esophagus using long, thin
+                instruments inserted through small incisions. The band has an
+                inflatable bladder that is used to make the band tighter or looser
+                around the stomach, controlling the amount of food allowed to pass
+                through the band.
             </p>
             <p class="item-description content-d">
-                The gastrectomy
-              simply removes a large portion of your stomach — about 80% —
-              leaving behind a small, tubular portion, like a sleeve. 
+                Adjustments are made in our Band Evaluation Clinic at the office.
+                ll adjustments (or “fills”) are made under x-ray guidance allowing
+                more precise filling of the band.  The clinic affords a unique educational
+                opportunity to our band patients because of the immediate visual feedback
+                they get when viewing the adjustment results on the x-ray monitor themselves.
+                The frequency and timing of adjustments depends on each individual.
+                Adjustable Gastric Band (AGB) patients periodically require upper
+                endoscopy to rule out erosion of the band.
             </p>
-            <p class="item-description content-d">This
-                naturally reduces the amount of food you can consume in one
-                sitting and makes you feel fuller faster. But it also reduces the
-                hunger hormones that are normally produced in your stomach. This
-                helps to stabilize your metabolism, decreasing your appetite and
-                regulating your blood sugar.
+            <p class="item-description content-d">
+                The Lap-Band® is now FDA approved tobe performed in patients with a
+                body mass index (BMI) of 30 or more with at least one obesity-related
+                comorbidity condition such as high blood pressure, heart disease, 
+                sleep apnea, Type-2 diabetes, or other conditions.
             </p>
           </div>
-          <img src="/images/gastric_sleeve.png" alt="Gastric sleeve surgery diagram" />
+          <img src="/images/gastric_band.png" alt="Gastric sleeve surgery diagram" />
         </div>
         <!-- Advantages -->
         <section
@@ -89,7 +96,7 @@
               <div class="item-intro">
                 <span class="item-number">01</span>
                 <p class="item-description">
-                  Technically simple and shorter surgery time
+                  Lowest rate of complications early after surgery
                 </p>
               </div>
             </div>
@@ -98,8 +105,7 @@
               <div class="item-intro">
                 <span class="item-number">02</span>
                 <p class="item-description">
-                  Can be performed in certain patients with high risk medical
-                  conditions
+                  Patients can go home on the day of surgery
                 </p>
               </div>
             </div>
@@ -108,8 +114,7 @@
               <div class="item-intro">
                 <span class="item-number">03</span>
                 <p class="item-description">
-                  Effective weight loss and improvement of obesity related
-                  conditions
+                  The band can be removed if needed
                 </p>
               </div>
             </div>
@@ -127,7 +132,7 @@
             <div class="item-intro">
               <span class="item-number">01</span>
               <p class="item-description">
-                Non-reversible procedure
+                The band may need several adjustments and monthly office visits during the first year
               </p>
             </div>
           </div>
@@ -136,7 +141,7 @@
             <div class="item-intro">
               <span class="item-number">02</span>
               <p class="item-description">
-                May worsen or cause new onset reflux and heart burn
+                Slower and less weight loss than with other surgical procedures
               </p>
             </div>
           </div>
@@ -145,7 +150,7 @@
             <div class="item-intro">
               <span class="item-number">03</span>
               <p class="item-description">
-                Less impact on metabolism compared to bypass procedures
+                Has a high rate of re-operation
               </p>
             </div>
           </div>
