--- a/gastric_bypass.html
+++ b/gastric_bypass.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
     />
-    <title>BariCare - Gastric Sleeve</title>
+    <title>BariCare - Gastric Bypass</title>
   </head>
   <body>
     <div class="wrapper">
@@ -33,9 +33,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <a class="active" href="gastric_sleeve.html">Gastric sleeve</a>
+              <ahref="gastric_sleeve.html">Gastric sleeve</a>
             </li>
-            <li><a href="gastric_bypass.html">Gastric bypass</a></li>
+            <li><a class="active"  href="gastric_bypass.html">Gastric bypass</a></li>
             <li><a href="gastric_band.html">Gastric band</a></li>
             <li class=""><a href="contact.html">Contact</a></li>
           </ul>
@@ -48,34 +48,32 @@
           <li><a href="index.html" class="breadcrumb-item">Home</a></li>
           <li>
             <a href="#" class="breadcrumb-item current-page"
-              ><span aria-current="page">Gastric sleeve</span></a
+              ><span aria-current="page">Gastric bypass</span></a
             >
           </li>
         </ul>
 
         <div class="container-content">
           <div class="content-intro">
-            <h1>Gastric sleeve</h1>
+            <h1>Gastric bypass</h1>
             <p class="item-description content-d">
-              The gastric sleeve, also called sleeve gastrectomy, is the most
-              commonly performed bariatric surgery in the U.S. This may be
-              because it's a relatively simple procedure that's safe to perform
-              on most people with little risk of complications. 
+                The gastric bypass is also known as the “Roux-en-Y," which
+                is a French term meaning “in the form of the letter Y.” With
+                this procedure, your small intestine will end up in that form.
             </p>
             <p class="item-description content-d">
-                The gastrectomy
-              simply removes a large portion of your stomach — about 80% —
-              leaving behind a small, tubular portion, like a sleeve. 
+                First, surgeons create a small pouch at the top of your stomach,
+                separating it from the lower portion with surgical staples.
+                Then they divide your small intestine and bring the new segment up to connect to the stomach pouch.
             </p>
-            <p class="item-description content-d">This
-                naturally reduces the amount of food you can consume in one
-                sitting and makes you feel fuller faster. But it also reduces the
-                hunger hormones that are normally produced in your stomach. This
-                helps to stabilize your metabolism, decreasing your appetite and
-                regulating your blood sugar.
+            <p class="item-description content-d">Food will now flow through the new,
+                smaller stomach and lower segment of your small intestine, bypassing the rest.
+                This restricts how much your stomach can hold and also how much nutrition
+                your small intestine can absorb. Restricting the small intestine makes this
+                method more effective than gastric restriction alone.
             </p>
           </div>
-          <img src="/images/gastric_sleeve.png" alt="Gastric sleeve surgery diagram" />
+          <img src="/images/gastric_bypass.png" alt="Gastric sleeve surgery diagram" />
         </div>
         <!-- Advantages -->
         <section
@@ -89,7 +87,7 @@
               <div class="item-intro">
                 <span class="item-number">01</span>
                 <p class="item-description">
-                  Technically simple and shorter surgery time
+                  Reliable and long-lasting weight loss
                 </p>
               </div>
             </div>
@@ -98,8 +96,7 @@
               <div class="item-intro">
                 <span class="item-number">02</span>
                 <p class="item-description">
-                  Can be performed in certain patients with high risk medical
-                  conditions
+                  Effective for remission of obesity-associated conditions
                 </p>
               </div>
             </div>
@@ -108,8 +105,7 @@
               <div class="item-intro">
                 <span class="item-number">03</span>
                 <p class="item-description">
-                  Effective weight loss and improvement of obesity related
-                  conditions
+                  Refined and standardized technique
                 </p>
               </div>
             </div>
@@ -127,7 +123,7 @@
             <div class="item-intro">
               <span class="item-number">01</span>
               <p class="item-description">
-                Non-reversible procedure
+                More vitamin and mineral deficiencies than sleeve gastrectomy or gastric banding
               </p>
             </div>
           </div>
@@ -136,7 +132,7 @@
             <div class="item-intro">
               <span class="item-number">02</span>
               <p class="item-description">
-                May worsen or cause new onset reflux and heart burn
+                There is a risk for small bowel complications and obstruction
               </p>
             </div>
           </div>
@@ -145,7 +141,7 @@
             <div class="item-intro">
               <span class="item-number">03</span>
               <p class="item-description">
-                Less impact on metabolism compared to bypass procedures
+                May cause “dumping syndrome”, a feeling of sickness after eating or drinking, especially sweets
               </p>
             </div>
           </div>
